typescript-expressions/tso500-ctdna/1.2.0--1/tests/summary.txt
# Test started at 2023-07-19T07:55:07+10:00

/home/alexiswl/UMCCR/GitHub/cwl-ica/typescript-expressions/tso500-ctdna/.1.2.0--1-test-evaluation/node_modules/jest-validate/node_modules/camelcase/index.js:3
const UPPERCASE = /[\p{Lu}]/u;
                  ^^^^^^^^^^^

SyntaxError: Invalid regular expression: /[\p{Lu}]/: Invalid property name in character class
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1176:20)
    at Module._compile (node:internal/modules/cjs/loader:1218:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1308:10)
    at Module.load (node:internal/modules/cjs/loader:1117:32)
    at Module._load (node:internal/modules/cjs/loader:958:12)
    at Module.require (node:internal/modules/cjs/loader:1141:19)
    at require (node:internal/modules/cjs/helpers:110:18)
    at _camelcase (/home/alexiswl/UMCCR/GitHub/cwl-ica/typescript-expressions/tso500-ctdna/.1.2.0--1-test-evaluation/node_modules/jest-validate/build/validateCLIOptions.js:9:39)
    at Array.<anonymous> (/home/alexiswl/UMCCR/GitHub/cwl-ica/typescript-expressions/tso500-ctdna/.1.2.0--1-test-evaluation/node_modules/jest-validate/build/validateCLIOptions.js:86:13)
# Test completed at 2023-07-19T07:55:08+10:00

